// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`agent-initiated compact with context files creates new context manager 1`] = `
[
  {
    "content": [
      {
        "citations": undefined,
        "text": "Greeting exchange",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`agent-initiated compact with continuation 1`] = `
[
  {
    "content": [
      {
        "citations": undefined,
        "text": "Greeting exchange",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Now let me continue with the next task.",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
]
`;

exports[`agent-initiated compact without continuation 1`] = `
[
  {
    "content": [
      {
        "citations": undefined,
        "text": "Greeting exchange",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`user-initiated @compact removes compact request and appends next prompt 1`] = `
[
  {
    "content": [
      {
        "citations": undefined,
        "text": "User greeted and asked about TypeScript",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Now help me with Python",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
]
`;
